--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Max and Ash Portfolio</title>
-  <link rel="stylesheet" href="cssfiles/Portfolio.css">
+  <link rel="stylesheet" href="css/Portfolio.css">
 </head>
 
 <body>
