--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
-<!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Max and Ash Portfolio</title>
-  <link rel="stylesheet" href="css/Portfolio.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="css/style.css">
+  <title>Document</title>
 </head>
-
 <body>
- 
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li>
-      <a href="#">About Us ▼</a>
-      <ul class="dropdown">
-        <li><a href="haha.html">Ashley T.</a></li>
-        <li><a href="Resume.html">Maxine S.</a></li>
+  <h1>Share your Travels</h1>
+  <h2>New York - Central Park</h2>
+      <ul>
+        <li><a href=" Description"> Description</a></li>
+        <li><a href=" Related Photo"> Related Photo</a></li>
+        <li><a href=" Reviews"> Reviews</a></li>
       </ul>
-    </li>
-    <li><a href="#">Works ▼</a>
-      <ul class="dropdown1">
-        <li><a href="Activity1.html">Activity</a></li>
-        <li><a href="#">Tribute</a></li>
-      </ul>
-    </li>
-    <li><a href="Contacts.html">Contacts</a></li>
-  </ul>
-
-  <p>Maxine & Ashley</p>
-  <h3>This is our Portfolio in Web Development containing <br>our resume, activities and more.</h3>
-  <nav class="explorebutton">
-    <a href="Portfolio.html">Learn More About Us</a>
-  </nav>
-  
-  <footer>
-    <p>Maxine Sayson | Ashley Tajanlangit</p>
-  </footer>
-</body>
-
+      <h3>Description</h3>
+      <p>Photo by Randy Conolly</p>
+      <p>This Photo of Conservatory Pond in <a href="Central Park">Central Park</a> in <a href="New York City">New York City</a> , was taken on October 22, 2011 with a Canonn EOS 30D camera.</p>
+      <img class="Johnfel" src="images/photo.jpg" >
+      <p> <I>Conservatory Pond in Central Park </I> </p>
+      <h2>Related Photos</h2>
+      <img class="feljohn" src="images/photo.jpg">
+      <img class="feljohn" src="images/photo.jpg">
+      <img class="feljohn" src="images/photo.jpg">
+    <h2> <b> Reviews </b> </h2>
+        <p> By: Ricardo on September 15, 2015 <br> Easy on HDR boddy </p>
+        <hr>
+          <p> By Susan on October 1, 2015 <br> I love Central park</p>
+        <hr>
+        <a href="Home"> Home |</a><a href="Browse"> Browse |</a><a href="Search"> Search |</a>
+        
+        </body>
 </html>
