--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Max and Ash Portfolio</title>
+  <link rel="stylesheet" href="css/Portfolio.css">
 </head>
+
 <body>
-  <h1>Share your Travels</h1>
-  <h2>New York - Central Park</h2>
-      <ul>
-        <li><a href=" Description"> Description</a></li>
-        <li><a href=" Related Photo"> Related Photo</a></li>
-        <li><a href=" Reviews"> Reviews</a></li>
+ 
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li>
+      <a href="#">About Us ▼</a>
+      <ul class="dropdown">
+        <li><a href="Resume2.html">Ashley T.</a></li>
+        <li><a href="Resume.html">Maxine S.</a></li>
       </ul>
-      <h3>Description</h3>
-      <p>Photo by Randy Conolly</p>
-      <p>This Photo of Conservatory Pond in <a href="Central Park">Central Park</a> in <a href="New York City">New York City</a> , was taken on October 22, 2011 with a Canonn EOS 30D camera.</p>
-      <img class="Johnfel" src="images/photo.jpg" >
-      <p> <I>Conservatory Pond in Central Park </I> </p>
-      <h2>Related Photos</h2>
-      <img class="feljohn" src="images/photo.jpg">
-      <img class="feljohn" src="images/photo.jpg">
-      <img class="feljohn" src="images/photo.jpg">
-    <h2> <b> Reviews </b> </h2>
-        <p> By: Ricardo on September 15, 2015 <br> Easy on HDR boddy </p>
-        <hr>
-          <p> By Susan on October 1, 2015 <br> I love Central park</p>
-        <hr>
-        <a href="Home"> Home |</a><a href="Browse"> Browse |</a><a href="Search"> Search |</a>
-        
-        </body>
+    </li>
+    <li><a href="#">Works ▼</a>
+      <ul class="dropdown1">
+        <li><a href="Activity1.html">Activity</a></li>
+        <li><a href="Tribute.html">Tribute</a></li>
+      </ul>
+    </li>
+    <li><a href="Contacts.html">Contacts</a></li>
+  </ul>
+    <div class="wrapper">
+      <div class="name-container">
+        <p>Maxine & Ashley</p>
+        <h3>This is our Portfolio in Web Development containing <br>our resume, activities and more.</h3>
+      </div>
+
+    </div>
+ 
+  <footer>
+    <p>Maxine Mae Sayson | Ashley Shayne Tajanlangit <br> BS Information Technology -1A</p>
+  </footer>
+</body>
+
 </html>
