--- a/index.html
+++ b/index.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Max and Ash Portfolio</title>
-  <link rel="stylesheet" href="css/Portfolio.css">
+    <meta charset="UTF-8">
+    <title>Personal Portfolio Website</title>
+    <!----CSS link----->
+    <link rel="stylesheet" href="css/style1.css">
 </head>
-
 <body>
- 
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li>
-      <a href="#">About Us ▼</a>
-      <ul class="dropdown">
-        <li><a href="Resume2.html">Ashley T.</a></li>
-        <li><a href="Resume.html">Maxine S.</a></li>
-      </ul>
-    </li>
-    <li><a href="#">Works ▼</a>
-      <ul class="dropdown1">
-        <li><a href="Activity1.html">Activity</a></li>
-        <li><a href="Tribute.html">Tribute</a></li>
-      </ul>
-    </li>
-    <li><a href="Contacts.html">Contacts</a></li>
-  </ul>
-    <div class="wrapper">
-      <div class="name-container">
-        <p>Maxine & Ashley</p>
-        <h3>This is our Portfolio in Web Development containing <br>our resume, activities and more.</h3>
-      </div>
 
+    <div class="hero">
+        <nav>
+            <img src="./images/logo.png" class="logo">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li>
+                <a href="#">About Us ▼</a>
+                <ul class="dropdown">
+                <li><a href="Resume2.html">Ashley T.</a></li>
+               <li><a href="Resume.html">Maxine S.</a></li>
+                 </ul>
+                </li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Portfolio</a></li>
+            </ul>
+        </nav>
+
+        <div class="content">
+            <span class="title">IT Students - 1A</span>
+            <h1><span>Ash & Max</span></h1>
+            <p>I’m working on a professional, visually sophisticated and technologically proficient, responsive and multi-functional React Template Imroz.</p>
+            <a href="#" class="btn">Download CV</a>
+        </div>
     </div>
- 
-  <footer>
-    <p>Maxine Mae Sayson | Ashley Shayne Tajanlangit <br> BS Information Technology -1A</p>
-  </footer>
-</body>
 
+</body>
 </html>
