--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Personal Portfolio Website</title>
+    <title>Max & Ash’s Portfolio </title>
     <!----CSS link----->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -25,16 +25,16 @@
                    <li><a href="Activity1.html">Activity</a></li>
                    <li><a href="Tribute.html">Tribute</a></li>
                  </ul>
-                </li>
-                <li><a href="#">Contacts</a></li>
+
+                <li><a href="Contacts.html">Contacts</a></li>
             </ul>
         </nav>
 
         <div class="content">
-            <span class="title">IT Students - 1A</span>
+            <span class="title"> IT Students</span>
             <h1><span>Ash & Max</span></h1>
-            <p>I’m working on a professional, visually sophisticated and technologically proficient, responsive and multi-functional React Template Imroz.</p>
-            <a href="#" class="btn">Download CV</a>
+            <p>This is Maxine Sayson & Ashley Shayne Tajanlangit from BSIT -1A. This is our Portfolio for Web Development.</p>
+            <a href="Contacts.html" class="btn">Learn about us.</a>
         </div>
     </div>
 
