--- a/Resume.html
+++ b/Resume.html
@@ -127,7 +127,7 @@
         <div class="right-part">
             <div class="banner">
                 <h1 class="firstname">Maxine Mae Sayson</h1>
-                <h1 class="lastname">Web Designer</h1><hr>
+                <h1 class="lastname">Web Designer</h1>
                 <p class="position">An extremely dedicated individual with 2 years of experience in Web Designing. A hardworking and passionate entry-level maintenance seeking full-time Web Developer position. A committed employee, possessing a strong work ethic with fastidious attention to details.</p>
                
             </div>
