--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li>
                 <a href="#">About Us</a>
                 <ul class="dropdown">
-                <li><a href="Resume2.html">Ashley T.</a></li>
-               <li><a href="Resume.html">Maxine S.</a></li>
+                <li><a href="Resume2.html">Ashley </a></li>
+               <li><a href="Resume.html">Maxine </a></li>
                  </ul>
                 </li>
                 <li><a href="#">Works</a>
