--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="content">
             <span class="title"> IT Students</span>
-            <h1><span>Ash & Max</span></h1>
+            <h1><span>Max & Ash</span></h1>
             <p>This is Maxine Sayson & Ashley Shayne Tajanlangit from BSIT -1A. This is our Portfolio for Web Development.</p>
             <a href="Contacts.html" class="btn">Learn about us.</a>
         </div>
