--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     
 <footer>
-    <p>DISCLAIMER : We hereby declare that we do not own the rights of some pictures being presented in our portfolio. All information posted is merely for educational and informational purposes only. While information on this wbsite has been verified o the best of our abilities, we cannot guarantee that there are no mistakes and errors.</p>
+    <p>DISCLAIMER : We hereby declare that we do not own the rights of some pictures being presented in our portfolio.<br> All information posted is merely for educational and informational purposes only. <br> While information on this wbsite has been verified o the best of our abilities, we cannot guarantee that there are no mistakes and errors.</p>
     </footer>
         </div>
 </body>
