--- a/Resume.html
+++ b/Resume.html
@@ -153,7 +153,7 @@
                     <h2 class="company-name">IT Specialist</h2>
                     <p class="work-text"> • Monitored and evaluated the IT systems to ensure efficiency as well as the safety and security of data storage. <br>
                     • Develop and implemented innovated connectivity network configurations which remarkably boosted overall network capabilities by 12%. <br>
-                    • Oversaw more than 200 computers of the company by monitoring, configuring, and maintaining all hardware and software systems.</p>
+                    </p>
                 </div>
                 <div class="work">
                     <div class="job-date">
@@ -163,7 +163,7 @@
                     <h2 class="company-name">IT Director</h2>
                     <p class="work-text">• Upgraded IT equipment, including laptops, monitors,and printers increasing efficiency by 16%. <br> 
                     • Directed 46 IT staff members, evaluating staff performance & efficiency though monthly check-ins with managers. <br>
-                    • Oversaw technical infrastructures with concentration in network security by performing tests and drafting reports. </p>
+                    </p>
                 </div>
             </div>
 
@@ -213,7 +213,7 @@
         </div>
     </section>
 <nav class="back-button">
-  <a href="Portfolio.html">Back</a>
+  <a href="index.html">Back</a>
 </nav>
   
 </body>
