--- a/Contacts.html
+++ b/Contacts.html
@@ -36,7 +36,7 @@
 </div>
 
 <nav class="back-button">
-  <a href="Portfolio.html">Return to Home</a>
+  <a href="index.html">Return to Home</a>
 </nav>
 
 </body>
