--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="hero">
         <nav>
-            
+            <img src="./imaes/logo.png" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li>
