--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="hero">
         <nav>
-            <img src="./imaes/logo.png" class="logo">
+            <img src="./images/logo.png" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li>
@@ -41,6 +41,6 @@
 <footer>
     <p>DISCLAIMER : We hereby declare that we do not own the rights of some pictures being presented in our portfolio.<br> All information posted is merely for educational and informational purposes only. <br> While information on this wbsite has been verified o the best of our abilities, we cannot guarantee that there are no mistakes and errors.</p>
     </footer>
-        </div>
+       
 </body>
 </html>
