--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Max & Ash’s Portfolio </title>
     <!----CSS link----->
     <link rel="stylesheet" href="css/styles.css">
@@ -39,7 +40,9 @@
     </div>
        
 <footer>
-    <p>DISCLAIMER : We hereby declare that we do not own the rights of some pictures being presented in our portfolio.<br> All information posted is merely for educational and informational purposes only. <br> While information on this wbsite has been verified o the best of our abilities, we cannot guarantee that there are no mistakes and errors.</p>
+    <p>DISCLAIMER : We hereby declare that we do not own the rights of some pictures being presented in our portfolio.<br> 
+        All information posted is merely for educational and informational purposes only. <br> 
+        While information on this wbsite has been verified o the best of our abilities, we cannot guarantee that there are no mistakes and errors.</p>
     </footer>
        
 </body>
