--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Max & Ash’s Portfolio </title>
     <!----CSS link----->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/logo.png">
 </head>
 <body>
 
