--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Max & Ash’s Portfolio </title>
     <!----CSS link----->
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="images/titlelogo.jpg">
+    <link rel="icon" href="images/titlebarlogo.png">
 </head>
 <body>
 
