--- a/Tribute.html
+++ b/Tribute.html
@@ -14,7 +14,14 @@
     <div class="card-body">
       <h1 class="card-title">ENHYPEN</h1>
       <p class="card-sub-title">engene</p>
-      <p class="card-info">We choose enhypen because they are our role model. Other enhypen members and us has the same age and they already succeed a lot. We want to be like them. There are also a time where enhypen help us a lot with our mental health just by listening to their musics and watching their videos.</p>
+      <p class="card-info">We choose enhypen because they are our role model. Other enhypen members and us has the same age and they already succeed a lot.
+        We want to be like them. There are also a time where enhypen help us a lot with our mental health just by listening to their musics and watching their videos. <br>
+        I stan enhypen because they became my comfort zone when I was on my lowest point. Their song gives me comfort and their funny moments.
+        They became my inspiration to succeed and trust yourself because in the end it will always be worth it. Enhypen comes from a survival show and they suffered a lot of challenges before they became enhypen. 
+        That's why they inspired me a lot. I can't pick any bias among them because they are all handsome and talented at the same time. They are all my bias, my ot7. 
+        My favorite song of them is “shout out” because it has a nice lyrics and this song is for the fans. My favorite line in the song is “my life without you is a misery”.
+        My life before meeting enhypen was a misery but when I meet them, they gives me comfort just by watching their videos and listening to their music. My life without enhypen is a misery that's why i'm thankful that I met them. 
+        I want to be as successful as them. I want to meet them in the future to thank them by saving me through their music.</p>
       <button class="card-btn"><a href="https://kprofiles.com/enhypen-profile-facts/">Read More</a></button>
     </div>
   </div>
