--- a/Tribute.html
+++ b/Tribute.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CARD</title>
   <link rel="stylesheet" href="css/Tribute.css">
+  <link rel="icon" href="images/t_logo.png">
 </head>
 
 <body>
