--- a/Resume2.html
+++ b/Resume2.html
@@ -7,6 +7,7 @@
   <title>Resume</title>
   <script src="https://unpkg.com/feather-icons"></script>
   <link rel="stylesheet" href="css/Resume2.css">
+  <link rel="icon" href="images/a_logo.jpeg">
 </head>
 <body>
   <div class="container">
