--- a/Tribute.html
+++ b/Tribute.html
@@ -16,16 +16,16 @@
       <h1 class="card-title">ENHYPEN</h1>
       <p class="card-sub-title">engene</p>
       <p class="card-info">We choose enhypen because they are our role model. Other enhypen members and us has the same age and they already succeed a lot.
-        We want to be like them. There are also a time where enhypen help us a lot with our mental health just by listening to their musics and watching their videos. <br>
+        We want to be like them. There are also a time where enhypen help us a lot with our mental health just by listening to their musics and watching their videos.<br></p>
         
-        I stan enhypen because they became my comfort zone when I was on my lowest point. Their song gives me comfort and their funny moments.
+      <p class="ash-msg">I stan enhypen because they became my comfort zone when I was on my lowest point. Their song gives me comfort and their funny moments.
         They became my inspiration to succeed and trust yourself because in the end it will always be worth it. Enhypen comes from a survival show and they suffered a lot of challenges before they became enhypen. 
         That's why they inspired me a lot. I can't pick any bias among them because they are all handsome and talented at the same time. They are all my bias, my ot7. 
         My favorite song of them is “shout out” because it has a nice lyrics and this song is for the fans. My favorite line in the song is “my life without you is a misery”.
         My life before meeting enhypen was a misery but when I meet them, they gives me comfort just by watching their videos and listening to their music. My life without enhypen is a misery that's why i'm thankful that I met them. 
-        I want to be as successful as them. I want to meet them in the future to thank them by saving me through their music.<br> 
+        I want to be as successful as them. I want to meet them in the future to thank them by saving me through their music.<br> </p>
         
-        I look up enhypen very much. Not because of the fact that they're handsome but because of the ability thy possess. They are all good in dancing and singing. I love their dancing skills because they look so call and I heard they're also kind.<br>
+        <p class="max-msg">I look up enhypen very much. Not because of the fact that they're handsome but because of the ability thy possess. They are all good in dancing and singing. I love their dancing skills because they look so call and I heard they're also kind.<br>
         I saw them first on facebook when they're still on their pre-debut and I was totally amazed of what they wear that time because it looks like they're on their military uniform. <br>
         Until one day, their fandom got hype up and that's when I became an engene which they named for their fandom. My ultimate bias is Jay Park but I love all of them though, lol. <br>
         I love their musics too! Especially to their music entitled "fever". I got some chills just by watching to that music video because they all look so good and professional.
