--- a/Tribute.html
+++ b/Tribute.html
@@ -26,8 +26,8 @@
         I want to be as successful as them. I want to meet them in the future to thank them by saving me through their music.<br> </p>
         
         <p class="max-msg">I look up enhypen very much. Not because of the fact that they're handsome but because of the ability thy possess. They are all good in dancing and singing. I love their dancing skills because they look so call and I heard they're also kind.<br>
-        I saw them first on facebook when they're still on their pre-debut and I was totally amazed of what they wear that time because it looks like they're on their military uniform. <br>
-        Until one day, their fandom got hype up and that's when I became an engene which they named for their fandom. My ultimate bias is Jay Park but I love all of them though, lol. <br>
+        I saw them first on facebook when they're still on their pre-debut and I was totally amazed of what they wear that time because it looks like they're on their military uniform. 
+        Until one day, their fandom got hype up and that's when I became an engene which they named for their fandom. My ultimate bias is Jay Park but I love all of them though, lol. 
         I love their musics too! Especially to their music entitled "fever". I got some chills just by watching to that music video because they all look so good and professional.
       </p>
       <button class="card-btn"><a href="https://kprofiles.com/enhypen-profile-facts/">Read More</a></button>
