--- a/Tribute.html
+++ b/Tribute.html
@@ -25,9 +25,9 @@
         My life before meeting enhypen was a misery but when I meet them, they gives me comfort just by watching their videos and listening to their music. My life without enhypen is a misery that's why i'm thankful that I met them. 
         I want to be as successful as them. I want to meet them in the future to thank them by saving me through their music. (Ash's POV) </p>
         
-        <p class="max-msg">I look up enhypen very much. Not because of the fact that they're handsome but because of the ability thy possess. They are all good in dancing and singing. I love their dancing skills because they look so call and I heard they're also kind.<br>
-        I saw them first on facebook when they're still on their pre-debut and I was totally amazed of what they wear that time because it looks like they're on their military uniform. 
-        Until one day, their fandom got hype up and that's when I became an engene which they named for their fandom. My ultimate bias is Jay Park but I love all of them though, lol. 
+        <p class="max-msg">I look up enhypen very much. Not because of the fact that they're handsome but because of the ability thy possess. They are all good in dancing and singing. I love their dancing skills because they look so call and I heard they're also kind.
+I saw them first on facebook when they're still on their pre-debut and I was totally amazed of what they wear that time because it looks like they're on their military uniform. 
+Until one day, their fandom got hype up and that's when I became an engene which they named for their fandom. My ultimate bias is Jay Park but I love all of them though, lol. 
         I love their musics too! Especially to their music entitled "fever". I got some chills just by watching to that music video because they all look so good and professional. I hope I can meet them all someday in personal.(Max's POV)
       </p>
       <button class="card-btn"><a href="https://kprofiles.com/enhypen-profile-facts/">Read More</a></button>
