--- a/Contacts.html
+++ b/Contacts.html
@@ -7,7 +7,8 @@
   <title>Contacts</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-  <link rel="stylesheet" href="css/Contacts.css"
+  <link rel="stylesheet" href="css/Contacts.css">
+  <link rel="icon" href="images/clogo.png">
 </head>
 
 <body>
