--- a/Contacts.html
+++ b/Contacts.html
@@ -16,8 +16,8 @@
 <p> ⁠✿ contact us through our social media accounts ✿<br> (⁠✿ʘ⁠ᴗ⁠ʘ⁠✿⁠)</p>
 
 <div class="maxsocmeds">
-<h3> maxine's<br> socials </h3>
-<h2> ashley's<br>socials</h2>
+<h2 class="content2"> ashley's socials </h3>
+<h2 class="content"> maxine's socials</h2>
 <a href="https://www.facebook.com/profile.php?id=100083730057116" class="fa fa-facebook">
 </a>
 <a href="https://mobile.twitter.com/xeysayson" class="fa fa-twitter"></a>
@@ -26,7 +26,6 @@
 </div>
   
 <div class="ashsocmeds">
-  
 <a href="https://www.facebook.com/ashleyshayne.tajanheaven" class="fa fa-facebook"></a>
 <a href="#" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-google"></a>
