--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="title"> IT Students</span>
             <h1><span>Max & Ash</span></h1>
             <p>This is Maxine Sayson & Ashley Shayne Tajanlangit from BSIT -1A. This is our Portfolio for our Web Development Project.</p>
-            <a href="Contacts.html" class="btn">Learn about us.</a>
+            <a href="Contacts.html" class="btn">Disclaimer</a>
         </div>
     </div>   
 </body>
