--- a/Tribute.html
+++ b/Tribute.html
@@ -13,9 +13,9 @@
   <div class="card">
     <img src="images/enhypenn.jpeg" class="card-img" alt="enhypen">
     <div class="card-body">
-      <h1 class="card-title">ENHYPEN</h1>
-      <p class="card-sub-title">engene</p>
-      <p class="card-info">We choose enhypen because they are our role model. Other enhypen members and us has the same age and they already succeed a lot.
+      <h1 class="card-title">ENHYPEN (엔하이픈)</h1>
+      <p class="card-sub-title">engene | 엔진</p>
+      <p class="card-info">We choose enhypen as our subject for our tribute message because they are our role model. Other enhypen members and us has the same age and they already succeed a lot.
         We want to be like them. There are also a time where enhypen help us a lot with our mental health just by listening to their musics and watching their videos.<br></p>
         
       <p class="ash-msg">I stan enhypen because they became my comfort zone when I was on my lowest point. Their song gives me comfort and their funny moments.
@@ -25,10 +25,10 @@
         My life before meeting enhypen was a misery but when I meet them, they gives me comfort just by watching their videos and listening to their music. My life without enhypen is a misery that's why i'm thankful that I met them. 
         I want to be as successful as them. I want to meet them in the future to thank them by saving me through their music. (Ash's POV) </p>
         
-        <p class="max-msg">I look up enhypen very much. Not because of the fact that they're handsome but because of the ability thy possess. They are all good in dancing and singing. I love their dancing skills because they look so call and I heard they're also kind.
+        <p class="max-msg">I look up enhypen very much. Not because of the fact that they're handsome but because of the ability they possess. They are all good in dancing and singing. I love their dancing skills because they look so cool and I heard they're also kind.
 I saw them first on facebook when they're still on their pre-debut and I was totally amazed of what they wear that time because it looks like they're on their military uniform. 
 Until one day, their fandom got hype up and that's when I became an engene which they named for their fandom. My ultimate bias is Jay Park but I love all of them though, lol. 
-        I love their musics too! Especially to their music entitled "fever". I got some chills just by watching to that music video because they all look so good and professional. I hope I can meet them all someday in personal.(Max's POV)
+        I love their musics too! Especially to their music entitled "fever". I got some chills just by watching to that music video because they all look so good and professional. I hope I can meet them all someday in South Korea. (Max's POV)
       </p>
       <button class="card-btn"><a href="https://kprofiles.com/enhypen-profile-facts/">Read More</a></button>
     </div>
