--- a/Contacts.html
+++ b/Contacts.html
@@ -28,7 +28,8 @@
   <a href="https://instagram.com/tjnhvn.ash?igshid=YmMyMTA2M2Y=" class="fa fa-instagram"></a>
   <a href="https://mail.google.com/mail/mu/mp/95/#tl/priority/%5Esmartlabel_personal" class="fa fa-google"></a>
   <a href="https://www.snapchat.com/add/ashaynet?share_id=fvFYTexQMKM&locale=en-US" class="fa fa-snapchat-ghost"></a>
-  </div
+  </div>
+    <a href="index.html" class="back-button">Return to Home</a>
 </body>
 
 </html>
