--- a/DisclaimerInfo.html
+++ b/DisclaimerInfo.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CARD</title>
   <link rel="stylesheet" href="css/DisclaimerInfo.css">
-  <link rel="icon" href="images/t_logo.png">
+  <link rel="icon" href="images/d_logo.png">
 </head>
 
 <body>
