--- a/Activity1.html
+++ b/Activity1.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Activity in Web Dev</title>
   <link rel="stylesheet" href="css/Activity1.css">
-  <link rel="stylesheet" href="images/act_logo.png">
+  <link rel="icon" href="images/act_logo.png">
 </head>
 
 <body>
