--- a/DisclaimerInfo.html
+++ b/DisclaimerInfo.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="card">
-    <img src="images/portfoliobg.gif" class="card-img" alt="enhypen">
+    <img src="images/bgdisclaimer.gif" class="card-img" alt="moonsky">
     <div class="card-body">
       <h1 class="card-title">DISCLAIMER</h1>
       <p class="card-sub-title">for education purposes only</p>
