--- a/DisclaimerInfo.html
+++ b/DisclaimerInfo.html
@@ -15,7 +15,7 @@
     <div class="card-body">
       <h1 class="card-title">DISCLAIMER</h1>
       <p class="card-sub-title">for education purposes only</p>
-      <p class="card-info"> Disclaimer: We hereby declare that we do not own the rights of some pictures being presented in our portfolio. All the credit belongs to the rightful owners. All information posted is merely for educational and informational purposes only. Whileinformation on this website has been verified the best of our abilities, we can't guarantee that there are no mistakes and errors. <br> Below are some sources and applications that we used for the pictures, gifs, background etc. <br> <br>
+      <p class="card-info"> Disclaimer: We hereby declare that we do not own the rights of some pictures being presented in our portfolio. All the credit belongs to the rightful owners. All information posted is merely for educational and informational purposes only. While information on this website has been verified the best of our abilities, we can't guarantee that there are no mistakes and errors.<br> <br> Below are some sources and applications that we used for the pictures, gifs, background etc. <br> <br>
       
       © |• canva <a href="https://www.canva.com/"> Canva </a><br>
       © |• pinterest <a href="https://www.pinterest.ph/"> Pinterest</a><br> 
